loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: not found: value isFaccingWall
while (! isFaccingWall()) {
         ^LoopStairs:4: error: not found: value isFaccingWall
while (isFaccingWall()) {
       ^